css fix where button did not look good on mobile

--- a/style.css
+++ b/style.css
@@ -41,12 +41,16 @@ body{
 	}
 }
 
-@media screen and (max-width:800px){
+@media screen and (max-width:700px){
 	.form-control{
 		width:40%;
 	}
 
 	.td-title{
 		font-size:12px;
+	}
+
+	.btn-warning{
+		margin-top:3vw;
 	}
 }
